<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/endless"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Endless"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/goBackToMainBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_arrow_back"
            android:background="@color/white"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/endless_game"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameSetupContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navigationBar"
        android:background="@color/ivory"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculation_mode"
            android:fontFamily="@font/montserrat_semibold"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>

        <include
            android:id="@+id/additionBtn"
            layout="@layout/addition_btn_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <include
            android:id="@+id/subtractionBtn"
            layout="@layout/subtraction_btn_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <include
            android:id="@+id/multiplicationBtn"
            layout="@layout/multiplication_btn_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <include
            android:id="@+id/divisionBtn"
            layout="@layout/division_btn_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <include
            android:id="@+id/allOfTheAboveBtn"
            layout="@layout/all_of_the_above_btn_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navigationBar"
        android:padding="10dp"
        android:background="@color/ivory"
        android:visibility="gone">

        <TextView
            android:id="@+id/displayedEquationTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/gridLayout"
            android:text="@string/nullString"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_semibold"
            android:background="@drawable/curved_gold_background"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="130dp"/>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:columnCount="3"
            android:rowCount="6">

            <!-- Row 0 -->

            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="false"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:padding="15dp"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_columnSpan="3"
                android:layout_margin="2dp"
                android:focusable="false"
                android:cursorVisible="false"
                android:singleLine="true"
                android:inputType="numberDecimal|numberSigned"
                android:background="@drawable/curved_white_background_black_strokes"/>

            <!-- Row 1 -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/negativeSignBtn"
                android:text="@string/negative_sign"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/decimalPointBtn"
                android:text="@string/decimal_point"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backspaceBtn"
                android:text="@string/backspace"
                android:textSize="30sp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <!-- Row 2 -->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/num1Btn"
                android:text="@string/_1"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/num2Btn"
                android:text="@string/_2"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/num3Btn"
                android:text="@string/_3"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <!-- Row 3 -->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/num4Btn"
                android:text="@string/_4"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/num5Btn"
                android:text="@string/_5"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/num6Btn"
                android:text="@string/_6"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <!-- Row 4 -->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/num7Btn"
                android:text="@string/_7"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/num8Btn"
                android:text="@string/_8"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/num9Btn"
                android:text="@string/_9"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <!-- Row 5 -->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/num0Btn"
                android:text="@string/_0"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_black_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enterBtn"
                android:text="@string/enter"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat_semibold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_columnSpan="2"
                android:layout_margin="2dp"
                android:paddingVertical="8dp"
                android:background="@drawable/curved_red_background"/>

        </GridLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/correctDisplayLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:paddingHorizontal="50dp"
        android:background="@color/light_green">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/check_img"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/incorrectDisplayLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageDisplay"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/baseline_white_close"/>

            <TextView
                android:id="@+id/correctAnsTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nullString"
                android:textAlignment="textStart"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp"
                android:layout_marginHorizontal="30dp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>